# BlockchainNote

./: .env.example  .gitignore  README.md
client/: next.config.js  package-lock.json  package.json  tailwind.config.js
client/app/: Provider.tsx  globals.css  layout.tsx  page.tsx
client/components/: Header.tsx  NewNote.tsx
client/lib/: contrat.ts  store.ts  transaction,.txt  uiSlice.ts  wallet.ts  walletSlice.ts
contract/: .gitignore  Cargo.toml  For_Test_Notes.md  README.md  docker-compose.yml
contract/src/: lib.rs  test.rs
