[package]
name = "stellar-notes-contract"
version = "0.1.0"
edition = "2021"
description = "Stellar Soroban smart contract for decentralized note-taking"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils", "alloc"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true